# SisijaFight

./: .gitignore  CMakeLists.txt  CMakePresets.json  COPYING  Configurator.hpp  Doxyfile  INFO.md  PLANS.md  README.md  STranslator.py  Stranslator.spec  globals.h  globals.hpp  main.cpp  sisija1.txt
Game/: Session.cpp  Session.h
Game/Audio/: Backend.cpp  Backend.h
Game/EventReceivers/: LobbyEVR.cpp  LobbyEVR.h
Game/GUI/: GUI.h  GUI.hpp  Lobby.cpp
Game/GUI/Elements/: MeshViewer.cpp  MeshViewer.h  SuperTable.cpp  SuperTable.hpp
Game/GUI/helpers/: helpers.cpp  helpers.h
Game/World/: World.cpp  World.h
Game/World/SPHSplash/: Splatter.cpp
Gamemodes/: ClassicFight.cpp  Gamemodes.h  Gamemodes.hpp
Network/: NetworkHandler.cpp  NetworkHandler.h  NetworkHandler.hpp
SGE/: SCamera.cpp  SGU-S.h  SisijaGraphicsUnitSubsystem.cpp
Tools/: GUITools.cpp  GUITools.h  GUITools.hpp
Tools/Translation/: Translator.cpp  Translator.hpp
docu/html/: _backend_8cpp.html  _backend_8cpp.js  _backend_8cpp__incl.dot  _backend_8hpp.html  _backend_8hpp.js  _backend_8hpp__dep__incl.dot  _backend_8hpp_source.html  _classic_fight_8cpp.html  _classic_fight_8cpp__incl.dot  _configurator_8cpp.html  _configurator_8cpp.js  _configurator_8cpp__incl.dot  _configurator_8cpp_a85683bd8e6fc36672b4b661cd4bb3a8b_cgraph.dot  _configurator_8cpp_a85683bd8e6fc36672b4b661cd4bb3a8b_icgraph.dot  _configurator_8hpp.html  _configurator_8hpp.js  _configurator_8hpp__dep__incl.dot  _configurator_8hpp__incl.dot  _configurator_8hpp_source.html  _g_u_i_8hpp.html  _g_u_i_8hpp.js  _g_u_i_8hpp__dep__incl.dot  _g_u_i_8hpp__incl.dot  _g_u_i_8hpp_abb2832fff46b1326bbb9480dd50db007_cgraph.dot  _g_u_i_8hpp_abb2832fff46b1326bbb9480dd50db007_icgraph.dot  _g_u_i_8hpp_source.html  _g_u_i_tools_8cpp.html  _g_u_i_tools_8cpp.js  _g_u_i_tools_8cpp__incl.dot  _g_u_i_tools_8cpp_a268235fc7077e49fb7623d477c5005ef_icgraph.dot  _g_u_i_tools_8cpp_a6a626c1dd0cfaa4ae2a9d4a6f2ca90d5_icgraph.dot  _g_u_i_tools_8cpp_a8a7ac27f85c96d5f16e691dae0c54112_cgraph.dot  _g_u_i_tools_8cpp_a8a7ac27f85c96d5f16e691dae0c54112_icgraph.dot  _g_u_i_tools_8cpp_aa9b85d2dd3bd11b2bfffdb26e2e8d7fc_icgraph.dot  _g_u_i_tools_8cpp_aadb4abcb813918cede5f382c4db07eee_cgraph.dot  _g_u_i_tools_8hpp.html  _g_u_i_tools_8hpp.js  _g_u_i_tools_8hpp__dep__incl.dot  _g_u_i_tools_8hpp__incl.dot  _g_u_i_tools_8hpp_a8c3b4fad8088c15c415bac422f78d3d0_cgraph.dot  (+396 more)
docu/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  defines_0.js  defines_1.js  defines_3.js  defines_4.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  (+65 more)
docu/latex/: _backend_8cpp.tex.tmp  _backend_8cpp__incl.dot  _backend_8hpp__dep__incl.dot  _classic_fight_8cpp__incl.dot  _configurator_8cpp__incl.dot  _configurator_8hpp.tex  _configurator_8hpp__dep__incl.dot  _configurator_8hpp_a85683bd8e6fc36672b4b661cd4bb3a8b_cgraph.dot  _configurator_8hpp_a85683bd8e6fc36672b4b661cd4bb3a8b_icgraph.dot  _g_u_i_8hpp.tex  _g_u_i_8hpp__dep__incl.dot  _g_u_i_8hpp__incl.dot  _g_u_i_8hpp_abb2832fff46b1326bbb9480dd50db007_cgraph.dot  _g_u_i_8hpp_abb2832fff46b1326bbb9480dd50db007_icgraph.dot  _g_u_i_8hpp_source.tex  _g_u_i_tools_8cpp__incl.dot  _g_u_i_tools_8cpp_a6a626c1dd0cfaa4ae2a9d4a6f2ca90d5_cgraph.dot  _g_u_i_tools_8cpp_a6a626c1dd0cfaa4ae2a9d4a6f2ca90d5_icgraph.dot  _g_u_i_tools_8cpp_a8a7ac27f85c96d5f16e691dae0c54112_cgraph.dot  _g_u_i_tools_8cpp_a8a7ac27f85c96d5f16e691dae0c54112_icgraph.dot  _g_u_i_tools_8cpp_a8c3b4fad8088c15c415bac422f78d3d0_cgraph.dot  _g_u_i_tools_8cpp_aa9b85d2dd3bd11b2bfffdb26e2e8d7fc_cgraph.dot  _g_u_i_tools_8cpp_aadb4abcb813918cede5f382c4db07eee_cgraph.dot  _g_u_i_tools_8hpp__dep__incl.dot  _g_u_i_tools_8hpp__incl.dot  _g_u_i_tools_8hpp_a268235fc7077e49fb7623d477c5005ef_icgraph.dot  _g_u_i_tools_8hpp_aa9b85d2dd3bd11b2bfffdb26e2e8d7fc_icgraph.dot  _g_u_i_tools_8hpp_source.tex  _gamemodes_8hpp.tex  _gamemodes_8hpp__dep__incl.dot  _gamemodes_8hpp__incl.dot  _gamemodes_8hpp_source.tex  _in_game_e_v_r_8hpp.tex  _in_game_e_v_r_8hpp__dep__incl.dot  _in_game_e_v_r_8hpp_source.tex  _lobby_8cpp.tex  _lobby_8cpp__incl.dot  _lobby_e_v_r_8cpp.tex  _lobby_e_v_r_8cpp__incl.dot  _lobby_e_v_r_8hpp__dep__incl.dot  (+165 more)
lib/: httplib.cpp  httplib.h  json.hpp
lib/Irrlicht/: CGUIMeshViewer.cpp  CGUIMeshViewer.h  CLogger.cpp  CLogger.h  CXMeshFileLoader.cpp
lib/Irrlicht/MacOSX/: AppDelegate.cpp  OSXClipboard.cpp
lib/Irrlicht/bzip2/: bzlib.h
lib/Irrlicht/extensions/: CProgressbar.cpp
lib/Irrlicht/include/: D2D1.h  D3D11SDKLayers.h  DxErr.h  IGUIMeshViewer.h  ILogger.h  IrrCompileConfig.h  d3d10sdklayers.h  gameux.h  xnamath.h  xnamathmisc.inl  xnamathvector.inl
lib/irrbullet/: ChangeLog.txt  License.txt  ReadMe.txt  VersionInfo.txt
lib/irrbullet/doc/: Doxyfile
lib/irrbullet/src/: irrBulletKinematicCharacterController.cpp
lib/openai/: CMakeLists.txt
lib/portaudio/: cmake_uninstall.cmake
lib/soloud/docsrc/: attributes.mmd  audiosource.mmd  backends.mmd  basics.mmd  bmx_api.mmd  c_api.mmd  codegen.mmd  concepts.mmd  concepts3d.mmd  core3d.mmd  coremisc.mmd  cs_api.mmd  d_api.mmd  dirstruct.mmd  examples.mmd  faders.mmd  file.mmd  filters.mmd  modplug.mmd  (+7 more)
src/: Configurator.cpp  Configurator.hpp  compileConfig.h  globals.hpp  main.cpp
src/AI/: GPT.hpp  Transcriber.cpp  Transcriber.hpp
src/Game/: Session.c  Session.cpp  Session.hpp
src/Gamemodes/: ClassicFight.cpp  Gamemodes.cpp  Gamemodes.hpp
src/Network/: NetworkHandler.cpp  NetworkHandler.hpp  NetworkManager.hpp
src/SGE/: Animators.cpp  Animators.hpp  GUIEnvironment.cpp  GUIEnvironment.hpp  IMGUIWrapper.cpp  IMGUIWrapper.hpp  SGU-S.hpp  Scripter.Impl.hpp  Scripting.cpp  Scripting.hpp  SisijaGraphicsUnitSubsystem.cpp  Widget.hpp
src/Tools/: GUITools.cpp  GUITools.hpp  Ping.hpp  RetrieveServers.hpp  Tools.hpp  UUID.hpp
translation/: de.mo  de.po
(+679 files in other folders)
